Sun Aug  3 15:33:18 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* info: Delete subdirectory.
	* Makefile.in (TARGETS, help): Delete info.
	* octMakefile.in (DISTSUBDIRS, BINDISTSUBDIRS): Delete info
	(binary-dist): Don't strip info/info.
	* install-octave: Don't install info.
	* configure.in: Don't run configure in info subdirectory.

Fri Jul 25 14:05:15 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_FLIBS): Avoid adding -lcrt0.o to FLIBS.

Thu Jul 17 13:31:08 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_FLIBS): Only accept an ld_run_path that is
	absolute.

Wed Jul  9 19:27:38 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Also check for getwd.

Tue Jul  8 17:47:11 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_FLIBS): Avoid grabbing an argument starting
	with a - as an option for another argument.

Wed Jul  2 21:34:15 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-auto-indent): New variable.
	(octave-electric-semi, octave-electric-space): Use it.

Thu Jun 26 22:16:59 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Only set GCC_IEEE_FP_FLAG to -mieee-fp on Intel
	systems if it seems to work.

Mon Jun 23 09:16:56 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (BOUNDS_CHECKING): Fix comment, allow bounds
	checking to be enabled.

Fri Jun 20 14:26:17 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Define SH_LD, SH_LDFLAGS, and RLD_FLAG for
	sparc-sun-sunos4*.

	* mkoctfile.in: Handle --strip.

Sun Jun 15 16:24:03 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (DISTSUBDIRS): Delete readline.
	(BINDISTSUBDIRS): Delete readline and kpathsea.
	(DISTDIRS): Add readline.

Wed Jun 11 16:28:36 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in: Allow more options, support for C and Fortran
	source, existing object files, etc.  Based on patch from Guido